open new websites in new tab

--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@
         <div class="bookmarks-grid">
             <div class="category">
                 <div class="category-title">🎬 Entertainment & Video</div>
-                <a href="https://bilibili.com" class="bookmark-item" data-keywords="bilibili b站 视频">
+                <a href="https://bilibili.com" class="bookmark-item" target="_blank" data-keywords="bilibili b站 视频">
                     <div class="title">Bilibili</div>
                     <div class="domain">bilibili.com</div>
                 </a>
-                <a href="https://youtube.com" class="bookmark-item" data-keywords="youtube 视频">
+                <a href="https://youtube.com" class="bookmark-item" target="_blank" data-keywords="youtube 视频">
                     <div class="title">YouTube</div>
                     <div class="domain">youtube.com</div>
                 </a>
-                <a href="https://netflix.com/browse" class="bookmark-item" data-keywords="netflix 电影 剧集">
+                <a href="https://netflix.com/browse" class="bookmark-item" target="_blank" data-keywords="netflix 电影 剧集">
                     <div class="title">Netflix</div>
                     <div class="domain">netflix.com</div>
                 </a>
@@ -164,23 +164,23 @@
 
             <div class="category">
                 <div class="category-title">🛒 Shopping</div>
-                <a href="https://apotea.se" class="bookmark-item" data-keywords="apotea 药店 保健">
+                <a href="https://apotea.se" class="bookmark-item" target="_blank" data-keywords="apotea 药店 保健">
                     <div class="title">Apotea</div>
                     <div class="domain">apotea.se</div>
                 </a>
-                <a href="https://amazon.se" class="bookmark-item" data-keywords="amazon 购物">
+                <a href="https://amazon.se" class="bookmark-item" target="_blank" data-keywords="amazon 购物">
                     <div class="title">Amazon Sweden</div>
                     <div class="domain">amazon.se</div>
                 </a>
-                <a href="https://webhallen.com" class="bookmark-item" data-keywords="webhallen 电子产品">
+                <a href="https://webhallen.com" class="bookmark-item" target="_blank" data-keywords="webhallen 电子产品">
                     <div class="title">Webhallen</div>
                     <div class="domain">webhallen.com</div>
                 </a>
-                <a href="https://elgiganten.se" class="bookmark-item" data-keywords="elgiganten 电器">
+                <a href="https://elgiganten.se" class="bookmark-item" target="_blank" data-keywords="elgiganten 电器">
                     <div class="title">Elgiganten</div>
                     <div class="domain">elgiganten.se</div>
                 </a>
-                <a href="https://ikea.se" class="bookmark-item" data-keywords="ikea 家具">
+                <a href="https://ikea.se" class="bookmark-item" target="_blank" data-keywords="ikea 家具">
                     <div class="title">IKEA Sweden</div>
                     <div class="domain">ikea.se</div>
                 </a>
@@ -188,19 +188,19 @@
 
             <div class="category">
                 <div class="category-title">🎓 Study & School</div>
-                <a href="https://minasidor.sgs.se" class="bookmark-item" data-keywords="sgs 学生 账户">
+                <a href="https://minasidor.sgs.se" class="bookmark-item" target="_blank" data-keywords="sgs 学生 账户">
                     <div class="title">SGS Mina Sidor</div>
                     <div class="domain">minasidor.sgs.se</div>
                 </a>
-                <a href="https://canvas.chalmers.se" class="bookmark-item" data-keywords="canvas chalmers 课程">
+                <a href="https://canvas.chalmers.se" class="bookmark-item" target="_blank" data-keywords="canvas chalmers 课程">
                     <div class="title">Chalmers Canvas</div>
                     <div class="domain">canvas.chalmers.se</div>
                 </a>
-                <a href="https://cloud.timeedit.net/chalmers/web/student/" class="bookmark-item" data-keywords="timeedit 课表 时间表">
+                <a href="https://cloud.timeedit.net/chalmers/web/student/" class="bookmark-item" target="_blank" data-keywords="timeedit 课表 时间表">
                     <div class="title">TimeEdit - Chalmers</div>
                     <div class="domain">cloud.timeedit.net</div>
                 </a>
-                <a href="https://udemy.com" class="bookmark-item" data-keywords="udemy 在线课程 学习">
+                <a href="https://udemy.com" class="bookmark-item" target="_blank" data-keywords="udemy 在线课程 学习">
                     <div class="title">Udemy</div>
                     <div class="domain">udemy.com</div>
                 </a>
@@ -208,15 +208,15 @@
 
             <div class="category">
                 <div class="category-title">💻 Development & Tools</div>
-                <a href="https://overleaf.com" class="bookmark-item" data-keywords="overleaf latex 论文">
+                <a href="https://overleaf.com" class="bookmark-item" target="_blank" data-keywords="overleaf latex 论文">
                     <div class="title">Overleaf</div>
                     <div class="domain">overleaf.com</div>
                 </a>
-                <a href="https://github.com" class="bookmark-item" data-keywords="github 代码 开发">
+                <a href="https://github.com" class="bookmark-item" target="_blank" data-keywords="github 代码 开发">
                     <div class="title">GitHub</div>
                     <div class="domain">github.com</div>
                 </a>
-                <a href="https://leetcode.cn" class="bookmark-item" data-keywords="leetcode 算法 编程">
+                <a href="https://leetcode.cn" class="bookmark-item" target="_blank" data-keywords="leetcode 算法 编程">
                     <div class="title">LeetCode</div>
                     <div class="domain">leetcode.cn</div>
                 </a>
@@ -224,11 +224,11 @@
 
             <div class="category">
                 <div class="category-title">🤖 AI Assistants</div>
-                <a href="https://chat.openai.com" class="bookmark-item" data-keywords="chatgpt openai ai">
+                <a href="https://chat.openai.com" class="bookmark-item" target="_blank" data-keywords="chatgpt openai ai">
                     <div class="title">ChatGPT</div>
                     <div class="domain">chat.openai.com</div>
                 </a>
-                <a href="https://claude.ai" class="bookmark-item" data-keywords="claude ai anthropic">
+                <a href="https://claude.ai" class="bookmark-item" target="_blank" data-keywords="claude ai anthropic">
                     <div class="title">Claude</div>
                     <div class="domain">claude.ai</div>
                 </a>
@@ -236,7 +236,7 @@
 
             <div class="category">
                 <div class="category-title">🏛️ Public Services</div>
-                <a href="https://transportstyrelsen.se" class="bookmark-item" data-keywords="transportstyrelsen 交通 驾照">
+                <a href="https://transportstyrelsen.se" class="bookmark-item" target="_blank" data-keywords="transportstyrelsen 交通 驾照">
                     <div class="title">Transportstyrelsen</div>
                     <div class="domain">transportstyrelsen.se</div>
                 </a>
