--- a/index.html
+++ b/index.html
@@ -17,6 +17,157 @@
             min-height: 100vh;
             padding: 20px;
             color: #333;
+            transition: background 0.5s ease;
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+
+        /* Background presets */
+        body.bg-gradient-1 { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); }
+        body.bg-gradient-2 { background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%); }
+        body.bg-gradient-3 { background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%); }
+        body.bg-gradient-4 { background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%); }
+        body.bg-gradient-5 { background: linear-gradient(135deg, #fa709a 0%, #fee140 100%); }
+        body.bg-gradient-6 { background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%); }
+        body.bg-gradient-7 { background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%); }
+        body.bg-gradient-8 { background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%); }
+        body.bg-gradient-9 { background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%); }
+        body.bg-gradient-10 { background: linear-gradient(135deg, #fad0c4 0%, #ffd1ff 100%); }
+
+        /* Photo wall styles */
+        .photo-wall {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -2;
+            overflow: hidden;
+        }
+
+        .photo-item {
+            position: absolute;
+            background-size: cover;
+            background-position: center;
+            opacity: 0.3;
+            border-radius: 10px;
+            animation: float 20s infinite ease-in-out;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0px) rotate(0deg); }
+            50% { transform: translateY(-20px) rotate(2deg); }
+        }
+
+        /* Settings panel */
+        .settings-btn {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: rgba(255, 255, 255, 0.9);
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+            font-size: 20px;
+            backdrop-filter: blur(10px);
+            transition: all 0.3s ease;
+            z-index: 1000;
+        }
+
+        .settings-btn:hover {
+            background: rgba(255, 255, 255, 1);
+            transform: rotate(90deg);
+        }
+
+        .settings-panel {
+            position: fixed;
+            top: 80px;
+            right: 20px;
+            background: rgba(255, 255, 255, 0.95);
+            border-radius: 15px;
+            padding: 20px;
+            width: 300px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+            display: none;
+            z-index: 1000;
+            max-height: 70vh;
+            overflow-y: auto;
+        }
+
+        .settings-panel.show {
+            display: block;
+            animation: slideIn 0.3s ease;
+        }
+
+        @keyframes slideIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .settings-section {
+            margin-bottom: 20px;
+        }
+
+        .settings-title {
+            font-weight: 600;
+            margin-bottom: 10px;
+            color: #333;
+        }
+
+        .bg-option {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            border-radius: 8px;
+            margin: 5px;
+            cursor: pointer;
+            border: 3px solid transparent;
+            transition: all 0.3s ease;
+        }
+
+        .bg-option:hover, .bg-option.active {
+            border-color: #667eea;
+            transform: scale(1.1);
+        }
+
+        .bg-mode-btn {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            background: white;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .bg-mode-btn:hover, .bg-mode-btn.active {
+            border-color: #667eea;
+            background: #f0f4ff;
+        }
+
+        .image-upload {
+            width: 100%;
+            padding: 10px;
+            border: 2px dashed #ddd;
+            border-radius: 8px;
+            text-align: center;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .image-upload:hover {
+            border-color: #667eea;
+            background: #f0f4ff;
+        }
+
+        .image-upload input {
+            display: none;
         }
 
         .container {
@@ -139,6 +290,49 @@
 </head>
 <body>
     <div class="container">
+        <!-- Background settings -->
+        <button class="settings-btn" onclick="toggleSettings()">⚙️</button>
+        
+        <div class="settings-panel" id="settingsPanel">
+            <div class="settings-section">
+                <div class="settings-title">Background Mode</div>
+                <button class="bg-mode-btn active" onclick="setBackgroundMode('gradient')" id="gradientMode">🎨 Gradient Colors</button>
+                <button class="bg-mode-btn" onclick="setBackgroundMode('single')" id="singleMode">🖼️ Single Image</button>
+                <button class="bg-mode-btn" onclick="setBackgroundMode('slideshow')" id="slideshowMode">🎬 Slideshow</button>
+                <button class="bg-mode-btn" onclick="setBackgroundMode('photowall')" id="photowallMode">🏞️ Photo Wall</button>
+            </div>
+
+            <div class="settings-section" id="gradientSection">
+                <div class="settings-title">Color Themes</div>
+                <div style="display: flex; flex-wrap: wrap;">
+                    <div class="bg-option active" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%)" onclick="setGradient(1)"></div>
+                    <div class="bg-option" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%)" onclick="setGradient(2)"></div>
+                    <div class="bg-option" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%)" onclick="setGradient(3)"></div>
+                    <div class="bg-option" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%)" onclick="setGradient(4)"></div>
+                    <div class="bg-option" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%)" onclick="setGradient(5)"></div>
+                    <div class="bg-option" style="background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%)" onclick="setGradient(6)"></div>
+                    <div class="bg-option" style="background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%)" onclick="setGradient(7)"></div>
+                    <div class="bg-option" style="background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%)" onclick="setGradient(8)"></div>
+                    <div class="bg-option" style="background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%)" onclick="setGradient(9)"></div>
+                    <div class="bg-option" style="background: linear-gradient(135deg, #fad0c4 0%, #ffd1ff 100%)" onclick="setGradient(10)"></div>
+                </div>
+            </div>
+
+            <div class="settings-section" id="imageSection" style="display: none;">
+                <div class="settings-title">Upload Images</div>
+                <div class="image-upload" onclick="document.getElementById('imageInput').click()">
+                    <input type="file" id="imageInput" multiple accept="image/*" onchange="handleImageUpload(event)">
+                    📁 Click to select images
+                </div>
+                <div style="margin-top: 10px; font-size: 12px; color: #666;">
+                    Or place images in /backgrounds/ folder in your repo
+                </div>
+            </div>
+        </div>
+
+        <!-- Photo wall container -->
+        <div class="photo-wall" id="photoWall"></div>
+
         <div class="header">
             <h1>Welcome, Shiqi!</h1>
             <div class="greeting" id="greeting"></div>
